--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Escalador - Coroinhas</title>
 </head>
 <body>
+
+	<a href="./Carta/index.html">Carta</a>
 		
 	<script type="text/javascript">
 		var coroinhas = [
