--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 
 	<nav>
 		<ul>
-			<li><a href="#about">About</a></li>
+			<li><a href="#presentation">Presentation</a></li>
 			<li><a href="#experience">Experience</a></li>
+			<li><a href="#skills">Skills</a></li>
 			<li><a href="#projects">Projects</a></li>
 			<li><a href="#social-networks">Social Networks</a></li>
 		</ul>
 	</nav>
 
 	<main>
-		<section id="about">
-			<h2>About Me</h2>
-			<p>I am currently an undergraduate student in Computer Engineering at the Federal University of Ceará (UFC)
+		<section id="presentation">
+			<h2>Presentation</h2>
+			<p>I am currently an R&D intern in Computer Vision and Robotics at Daedalus. At the same time, I am majoring in Computer Engineering at the Federal University of Ceará (UFC)
 				and I am also a computer technician. In my academic experience, I have been involved in research
-				projects in Image Processing, Computer Vision, Data Visualization, and Data Science. Additionally, I
+				projects in Image Processing, Computer Vision, Data Visualization, Data Science and IoT. Additionally, I
 				have experience in Web Development and have participated in research, extension, and teaching
 				scholarships. I like: learning new things, science, games, programming, music, meeting new cultures and languages.</p>
 		</section>
@@ -36,12 +37,23 @@
 		<section id="experience">
 			<h2>Experience</h2>
 			<ul>
-				<li>Intern in Network and Computer Maintenance at the Municipality of Hidrolândia, CE</li>
-				<li>Scholarship holder of the Programa de Educação Tutorial (PET), by the Computer Engineering course at the Universidade Federal of Ceará (UFC)</li>
-				<li>Freelance Web Developer</li>
-				<li>Video Editor</li>
-				<li>Mathematics Teacher</li>
-				<li>Web Development Teacher</li>
+				<li>R&D intern in Computer Vision and Robotics at Daedalus (2023 - Today)</li>
+				<li>Web Development Teacher (2022 - Today)</li>
+				<li>Scholarship holder of the Programa de Educação Tutorial (PET), by the Computer Engineering course at the Universidade Federal of Ceará (2020 - Today)</li>
+				<li>Mathematics Teacher (2022)</li>
+				<li>Freelance Web Developer (2020-2021)</li>
+				<li>Video Editor (2020-2021)</li>
+				<li>Guitar Teacher (2019)</li>
+				<li>Intern in Network and Computer Maintenance at the Municipality of Hidrolândia-CE (2018)</li>
+			</ul>
+		</section>
+
+		<section id="skills">
+			<h2>Skills</h2>
+			<ul>
+				<li>Knowledge Areas: Computer Vision, Image Processing, Data Science, WEB Development, IoT, Eletronics, Robotics, Game Development.</li>
+				<li>Programming Languages: Python, JavaScript, TypeScript, PHP, C, C++, C#, Java, MATLAB, Scilab, Pascal, Assembly</li>
+				<li>Technologies: Git / GitHub, Docker, ROS, Arduino / ESP32, Linux / Windows</li>
 			</ul>
 		</section>
 
